test/files/pos/t10786/Foo_1.java
package pkg;

public class Foo_1 {
    static class StaticClass {
        public int x = 1;
        public static int y = 1;
    }
    protected static class ProtectedStaticClass {
        public int x = 1;
        public static int y = 1;
    }
}
