test/files/neg/t6934/JavaClass.java
package test;

public class JavaClass {

    protected static int STATIC_PROTECTED_FIELD = 4;

}

